[package]
name = "accuscene-streaming"
version = "0.2.0"
edition = "2021"
authors = ["AccuScene Team"]
description = "Real-time distributed streaming pipeline for AccuScene Enterprise"
license = "MIT OR Apache-2.0"

[dependencies]
# Internal dependencies
accuscene-core = { path = "../accuscene-core" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync", "fs", "io-util"] }
tokio-tungstenite = "0.21"

# Async utilities
futures = "0.3"
futures-util = "0.3"
async-broadcast = "0.7"
async-channel = "2.1"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.5"

# Apache Arrow for columnar data
arrow = { version = "40.0", features = ["prettyprint"], optional = true }
parquet = { version = "40.0", features = ["arrow", "async"], optional = true }

# Channels
crossbeam-channel = "0.5"
flume = "0.11"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Compression
flate2 = "1.0"

# Additional utilities
parking_lot = "0.12"
dashmap = "5.5"
once_cell = "1.19"

# File watching
notify = "6.1"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.4"
tempfile = "3.8"

[features]
default = ["compression"]
compression = []
arrow-support = ["arrow", "parquet"]
full = ["compression", "arrow-support"]
